syntax = "proto3";

message User {
    string id = 1;
    uint64 createdAt = 2;
    uint64 updatedAt = 3;
    string name = 4;
    string email = 5;
    string photo = 6;
    OboardingFlags onboardingFlags = 7;
}

message OboardingFlags {
    uint64 initial = 1;
}

message UserCreateOneInput {
    string name = 4;
    string email = 5;
    string photo = 6;
    OboardingFlags onboardingFlags = 7;
}

message UserUpdateOneInput {
    string id = 1;
    string name = 4;
    string email = 5;
    string photo = 6;
    OboardingFlags onboardingFlags = 7;
}

message UserFindOneInput {
    string id = 1;
}

message UserRemoveOneInput {
    string id = 1;
}

message UserSearchFilter {
    string name = 1;
}

message UserSearchOpts {
    uint64 limit = 1;
    uint64 offset = 2;
    bool waitForSync = 3;
}

message UserSearchInput {
    UserSearchFilter filter = 1;
    UserSearchOpts opts = 2;
}

message UserSearchResultMeta {
    uint64 offset = 1;
}

message UserSearchResult {
    UserSearchResultMeta meta = 1;
    repeated User users = 2;
}

service UserService {
    rpc CreateOne (UserCreateOneInput) returns (User) {}
    rpc UpdateOne (UserUpdateOneInput) returns (User) {}
    rpc FindOne (UserFindOneInput) returns (User) {}
    rpc FindMe (google.protobuf.Empty) returns (User) {}
    rpc RemoveOne (UserRemoveOneInput) returns (google.protobuf.Empty) {}
    rpc Search (UserSearchInput) returns (UserSearchResult) {}
}